--- a/src/main/webapp/WEB-INF/views/createUnpublishedListing.html
+++ b/src/main/webapp/WEB-INF/views/createUnpublishedListing.html
@@ -31,6 +31,10 @@
                         <input type="text" name="dateOfDeath" id="dateOfDeath" placeholder="Date Of Death" style="width:100%">
 	                    </fieldset>
                         <fieldset style="border:0">
+                        <input type="text" name="graveNumber" id="graveNumber" placeholder="Grave Number" style="width:100%">
+	                    </fieldset>
+                        
+                        <fieldset style="border:0">
                         <textarea name="graveInscription" id="graveInscription" placeholder="Grave Inscription" style="width:100%; height : auto">
                         </textarea>
                         </fieldset>
