--- a/src/main/webapp/WEB-INF/views/createCemetery.html
+++ b/src/main/webapp/WEB-INF/views/createCemetery.html
@@ -1,44 +1,54 @@
 <!DOCTYPE html>
 <html>
-    <head>
-         
-        <title>Start Page</title>
-        <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-        <link rel="stylesheet" type="text/css" href="/CemeteryListingsWebApp/resources/css/index.css">
-    </head>
-    <body>
+  <head>
+    <link rel="stylesheet" type="text/css" href="/CemeteryListingsWebApp/resources/css/listing-pages.css">
+    <script type="text/javascript" src="/CemeteryListingsWebApp/resources/js/jquery-1.11.1.min.js"></script>
+    <script type="text/javascript" src="/CemeteryListingsWebApp/resources/js/scripts/script.js"></script>
+     <script type="text/javascript" src="/CemeteryListingsWebApp/resources/js/plugins/cookies-plugin/jquery.cookie.js"></script>
+</head>
+
+<body class="siteWrapper">
+    <div class="pageHeader">
+        <a href="#" class="logo"><img src="/CemeteryListingsWebApp/resources/images/logo2.jpg"></a>
+                <ul class="navList" style="width : 100%">
+                   <li><a href="/CemeteryListingsWebApp/api/auth/loggedIn">Admin</a></li>
+                </ul>   
+            </div>
+            <div class="dummyHeader"></div>
+    <div class="pageWrapper">
         <div class="siteWrapper"> <!-- this is the beginning of site wrapper will contain the entire pages html -->       
                 <div class="siteContent">  <!-- this is the beginning of site content will contain all the content --> 
-                    <h1>Jquery Test</h1>
-                    <form style="width:20%; margin-left:10%;" id="data"> 
+                    <h1>New Cemetery</h1>
+                    <form style="width:50%; margin-left:20%;" id="data"> 
                             <fieldset style="border:0">
-	                    <input type="text" name="cemeteryName" id="cemeteryName" placeholder="Cemetery Name" style="width:100%">
+	                    <input type="text" name="cemeteryName" id="cemeteryName" placeholder="Cemetery Name" style="width:50%">
                             </fieldset>
                             <fieldset style="border:0">
-	                    <input type="text" name="contactName" id="contactName" placeholder="Contact Name" style="width:100%">
+	                    <input type="text" name="contactName" id="contactName" placeholder="Contact Name" style="width:50%">
                             </fieldset>
                             <fieldset style="border:0">
-	                    <input type="text" name="contactNumber" id="contactNumber" placeholder="Contact Number" style="width:100%">
+	                    <input type="text" name="contactNumber" id="contactNumber" placeholder="Contact Number" style="width:50%">
                             </fieldset>
                             <fieldset style="border:0">
-	                    <input type="text" name="country" id="country" placeholder="Country" style="width:100%">
+	                    <input type="text" name="country" id="country" placeholder="Country" style="width:50%">
                             </fieldset>
                             <fieldset style="border:0">
-	                    <input type="text" name="district_state" id="district_state" placeholder="District" style="width:100%">
+	                    <input type="text" name="district_state" id="district_state" placeholder="District" style="width:50%">
                             </fieldset>
                             <fieldset style="border:0">
-                            <input type="text" name="locationOfCemetery" id="locationOfCemetery" placeholder="Locatio Of Cemetery eg 12.06.12:45.63.89" style="width:100%">
+                            <input type="text" name="locationOfCemetery" id="locationOfCemetery" placeholder="Locatio Of Cemetery eg 12.06.12:45.63.89" style="width:50%">
                             </fieldset>
                             <fieldset style="border:0">
-                            <input type="text" name="province_state" id="province_state" placeholder="Province/State" style="width:100%">
+                            <input type="text" name="province_state" id="province_state" placeholder="Province/State" style="width:50%">
                             </fieldset>
                             <fieldset style="border:0">
-                            <input type="text" name="town" id="town" placeholder="Town" style="width:100%">
+                            <input type="text" name="town" id="town" placeholder="Town" style="width:50%">
                             </fieldset>
-                            <input type="button" name="post" value="create cemetery" id="createButton" style="margin-left: 35%">
+                            <input type="button" name="post" value="Create cemetery" id="createButton" style="margin-left: 20%">
 	                </form>
                 </div>
             </div>
+    </div>
         <!-- Script begins here -->
         <script type="text/javascript" src="/CemeteryListingsWebApp/resources/js/jquery-1.11.1.min.js"></script>
         
@@ -55,11 +65,11 @@
                     contentType: "application/json",
                     success: function (status, jqXHR) {
 
-                        window.location.href = "/CemeteryListingsWebApp/api/cemetery/cemeterylistings";
+                        //window.location.href = "/CemeteryListingsWebApp/api/cemetery/cemeterylistings";
                     },
 
                     error: function (jqXHR, status) {
-                       window.location.href = "/CemeteryListingsWebApp/api/cemetery/cemeterylistings";
+                       //window.location.href = "/CemeteryListingsWebApp/api/cemetery/cemeterylistings";
                     }
                  });
 
