--- a/src/main/webapp/resources/css/blackAndWhite.css
+++ b/src/main/webapp/resources/css/blackAndWhite.css
@@ -8,6 +8,7 @@
 
 	height:auto;
 	width:70%;
+        margin-top: 3%;
 	margin-left: 15%;
 	margin-right: 15%;
 	background-color: white;
@@ -18,7 +19,7 @@
 	position: fixed;
 	width: 100%;
 	background-color: black;
-	height: 70px;
+	height: 80px;
 	margin-left: -0.4%;
 	margin-top: -0.4%;
 	opacity: 0.5;
