--- a/src/main/webapp/WEB-INF/views/subscriberDetails.html
+++ b/src/main/webapp/WEB-INF/views/subscriberDetails.html
@@ -9,8 +9,13 @@
 
 <body class="siteWrapper">
     <div class="pageHeader">
-        <a href="#" class="logo"><img src="/CemeteryListingsWebApp/resources/images/logo2.jpg"></a>
+        <a href="#" class="logo"><img src="/CemeteryListingsWebApp/resources/images/logo3.jpg"></a>
                 <ul class="navList" style="width : 100%">
+                    <li><a href="/CemeteryListingsWebApp/">Home</a></li>
+                    <li><a href="/CemeteryListingsWebApp/api/cemetery/cemeterylistings">Cemetery Listings</a></li>
+                    <li><a href="#">Deceased Listings</a></li>
+                    <li><a href="#">Contact Us</a></li>
+                    <li><a href="/CemeteryListingsWebApp/api/auth/login" style="margin-left:10% !important;" class="user">Login</a></li>
                    <li><a href="/CemeteryListingsWebApp/api/auth/loggedIn">Admin</a></li>
                 </ul>   
             </div>
@@ -18,39 +23,30 @@
     <div class="pageWrapper">
         <div class="siteWrapper"> <!-- this is the beginning of site wrapper will contain the entire pages html -->       
                 <div class="siteContent">  <!-- this is the beginning of site content will contain all the content --> 
-                    <h1>New Cemetery</h1>
+                    <h1 align ='center'>Subscriber Details</h1>
                     <form style="width:50%; margin-left:20%;" id="data"> 
-                            <fieldset style="border:0">
-	                    <input type="text" name="cemeteryName" id="cemeteryName" placeholder="Cemetery Name" style="width:50%">
-                            </fieldset>
-                            <fieldset style="border:0">
-	                    <input type="text" name="contactName" id="contactName" placeholder="Contact Name" style="width:50%">
-                            </fieldset>
-                            <fieldset style="border:0">
-	                    <input type="text" name="contactNumber" id="contactNumber" placeholder="Contact Number" style="width:50%">
-                            </fieldset>
-                            <fieldset style="border:0">
-	                    <input type="text" name="country" id="country" placeholder="Country" style="width:50%">
-                            </fieldset>
-                            <fieldset style="border:0">
-	                    <input type="text" name="district_state" id="district_state" placeholder="District" style="width:50%">
-                            </fieldset>
-                            <fieldset style="border:0">
-                            <input type="text" name="locationOfCemetery" id="locationOfCemetery" placeholder="Locatio Of Cemetery eg 12.06.12:45.63.89" style="width:50%">
-                            </fieldset>
-                            <fieldset style="border:0">
-                            <input type="text" name="province_state" id="province_state" placeholder="Province/State" style="width:50%">
-                            </fieldset>
-                            <fieldset style="border:0">
-                            <input type="text" name="town" id="town" placeholder="Town" style="width:50%">
-                            </fieldset>
-                            <input type="button" name="post" value="Create cemetery" id="createButton" style="margin-left: 20%">
-	                </form>
+                        <!-- username, email, pwd, firstName, surname, lastContributionYear, userRoleID, 
+                        Filled in by admin --subscriptionDate, validUntil  -->
+                            <table width = '90%' align='center'>
+                                <tr><th> </th></tr>
+                                <tr><td>User name</td><td><input type="text" name="username" id="username" placeholder="" style="width:100%"></td> </tr>
+                                <tr><td>First Name </td><td><input type="text" name="firstName" id="firstName" placeholder="" style="width:100%"> </td> </tr>
+                                <tr><td>Surname </td><td><input type="text" name="surname" id="surname" placeholder="" style="width:100%"> </td></tr>
+                                <tr><td>E-mail </td><td><input type="text" name="email" id="email" placeholder="" style="width:100%"> </td></tr>
+                                <tr><td>Password </td><td><input type="password" name="pwd" id="pwd" placeholder="" style="width:100%"> </td></tr>
+                                <tr><td>last Contribution Year</td><td><input type="text" name="lastContributionYear" id="lastContributionYear" placeholder="" style="width:100%"> </td></tr>
+                                <tr><td>user Role</td><td><input type="password" name="userRole" id="userRole"  style="width:100%"> </td></tr>
+                                <tr><td>Subscription Date</td><td><input type="password" name="subscriptionDate" id="subscriptionDate" placeholder="" style="width:100%"> </td></tr>
+                                <tr><td>validUntil</td><td><input type="password" name="validUntil" id="validUntil" placeholder="" style="width:100%"> </td></tr>
+                           </table>                            
+                           <input type="button" name="post" value="Save Changes (is this what this screen does?)" id="createButton" style="margin-left: 20%">
+                    </form>
                 </div>
             </div>
     </div>
         <!-- Script begins here -->
         <script type="text/javascript" src="/CemeteryListingsWebApp/resources/js/jquery-1.11.1.min.js"></script>
         
-    </body>
+        <!-- FANCY SCRIPT GOES HERE -->
+</body> 
 </html>
