--- a/src/main/webapp/WEB-INF/views/cemeteryListingsPage.html
+++ b/src/main/webapp/WEB-INF/views/cemeteryListingsPage.html
@@ -7,21 +7,22 @@
     </head>
     <body class="siteWrapper">
          <div class="pageHeader">
-        <a href="#" class="logo"><img src="/CemeteryListingsWebApp/resources/images/logo2.jpg"></a>
+        <a href="#" class="logo"><img src="/CemeteryListingsWebApp/resources/images/logo3.jpg"></a>
                 <ul class="navList"  style="width : 100%">
                     <li><a href="/CemeteryListingsWebApp/">Home</a></li>
                     <li><a href="/CemeteryListingsWebApp/api/cemetery/cemeterylistings">Cemetery Listings</a></li>
                     <li><a href="#">Deceased Listings</a></li>
-                    <li><a href="#">Contact US</a></li>
+                    <li><a href="#">Contact Us</a></li>
                     <li><a href="/CemeteryListingsWebApp/api/auth/login" style="margin-left:10% !important;" class="user">Login</a></li>
+                   <li><a href="/CemeteryListingsWebApp/api/auth/loggedIn">Admin</a></li>
                 </ul>   
-
+<!--
                 <ul class="socialListNav">
                     <li><a href="#"><img src="/CemeteryListingsWebApp/resources/images/fbbtn.png" class="simpleLogo"></a></li>
                     <li><a href="#"><img src="/CemeteryListingsWebApp/resources/images/instagrambtn.png" class="simpleLogo"></a></li>
                     <li><a href="#"><img src="/CemeteryListingsWebApp/resources/images/tweetbtn.png" class="simpleLogo"></a></li>
                 </ul>   
-
+-->
             </div>
             <div class="dummyHeader"></div>
                 <div class="pageWrapper">        <!-- this is the beginning of site wrapper will contain the entire pages html -->       
@@ -59,6 +60,7 @@
                                 console.log(obj.contactName);
                                 console.log(obj.contactNumber);
 // building html objects here
+
 $(".listings").append(' <tr>'+' <td><a href='+'"/CemeteryListingsWebApp/api/cemetery/id/'+obj.id+'">' + '</a></td>' + '<td>Cemetery Name : ' + obj.location.cemeteryName + '</td>' + ' <td> Location - Country : ' + obj.location.country + 
     '</td>' + '<td> <button class="goToDetails" text="details" value='+obj.id+'>' + '</td>' + "</tr>"); 
                             
