--- a/src/main/webapp/WEB-INF/views/cemeteryDetailsPage.html
+++ b/src/main/webapp/WEB-INF/views/cemeteryDetailsPage.html
@@ -36,7 +36,7 @@
                             
                         </table>
                         <h2>Listings at Cemetery</h2>
-                        <table class="cemeteryListings">
+                        <table class="deceasedListings">
                             <tr><th>col 1 </th><th>col 2</th><th>col 3</th></tr>
                             
                         </table>
@@ -85,6 +85,8 @@
 	    }
 
 	});
+        
+        //add another script that add the published listings to the deceasedListings table
 
         </script>
        
